# Conduit-Studio

./: .gitignore  BUILD.md  CLAUDE.md  README.md  USER_GUIDE.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/backend/: conduit-backend.spec  dev.sh  mcp_server.py  pyproject.toml  startup.py
apps/backend/app/: main.py
apps/backend/app/models/: codegen.py  pipeline.py  project.py
apps/backend/app/routers/: agent.py  analyze.py  cloud_deploy.py  codegen.py  connectors.py  debug.py  files.py  history.py  huggingface.py  integrations.py  kubeflow.py  mlflow.py  pipeline.py  playground.py  project.py  vault.py
apps/backend/app/services/: analyzer.py  azure_ml.py  executor.py  pipeline_history.py  playground.py  retrieval_debug.py  vault.py
apps/backend/app/services/codegen/: docker_gen.py  engine.py  kubeflow_gen.py  model_card_gen.py  notebook_gen.py  package_gen.py  python_gen.py
apps/backend/app/services/connectors/: __init__.py  azure.py  base.py  database.py  gcs.py  huggingface.py  local.py  s3.py
apps/backend/app/services/integrations/: huggingface_client.py  kubeflow_client.py  mlflow_client.py
apps/backend/app/templates/llm/: chain_langgraph_workflow.py.j2  chain_llamaindex_query.py.j2  chain_rag.py.j2  chain_react_agent.py.j2  chunk_markdown.py.j2  chunk_recursive.py.j2  deploy_fastapi.py.j2  deploy_langserve.py.j2  embed_huggingface.py.j2  embed_ollama.py.j2  embed_openai.py.j2  finetune_dataset_prep.py.j2  finetune_lora_config.py.j2  finetune_merge_push.py.j2  finetune_ollama_export.py.j2  finetune_qlora_config.py.j2  finetune_sft_trainer.py.j2  split_ab.py.j2  (+11 more)
(+112 files in other folders)
