[project]
name = "conduit-studio-backend"
version = "0.1.0"
description = "Conduit Studio FastAPI backend — execution engine, code generator, data connectors"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "websockets>=14.0",
    "httpx>=0.28.0",
    # Data
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    # ML
    "scikit-learn>=1.6.0",
    "mlflow>=2.18.0",
    "kfp>=2.16.0",
    "huggingface-hub>=1.8.0",
    "datasets>=4.8.4",
]

[project.optional-dependencies]
aws = ["boto3>=1.35.0", "s3fs>=2024.1.0"]
azure = ["azure-storage-blob>=12.24.0"]
gcs = ["google-cloud-storage>=2.19.0", "gcsfs>=2024.1.0"]
db = ["sqlalchemy>=2.0.0", "psycopg2-binary>=2.9.0"]
tensorflow = ["tensorflow>=2.18.0"]
torch = ["torch>=2.5.0"]
xgboost = ["xgboost>=2.1.0"]
langchain = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
]
mcp = ["fastmcp>=2.0"]
kubeflow = ["kfp>=2.0"]
all = [
    "conduit-studio-backend[aws,azure,gcs,db,xgboost,langchain,mcp,kubeflow]"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pyinstaller>=6.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
